CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(algorithm)
FILE(GLOB myList RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../bin)
MESSAGE("CMAKE_RUNTIME_OUTPUT_DIRECTORY is ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")

ADD_DEFINITIONS(-std=c++11 -g)
SET(NUM 0)
FOREACH(fileName IN LISTS myList)
#    MESSAGE("fileName is ${fileName}")
    IF (NUM EQUAL 10)
        BREAK()
    ENDIF()
    GET_FILENAME_COMPONENT(binFile ${fileName} NAME_WE)
    ADD_EXECUTABLE(${binFile} ${fileName})
    MATH(EXPR NUM "${NUM} + 1")
ENDFOREACH()